[package]
name = "fathomdb-engine"
description = "FathomDB engine — embedded vector + JSON database core (storage, projection, ingest, query)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fathomdb-embedder.workspace = true
fathomdb-embedder-api.workspace = true
fathomdb-query.workspace = true
fathomdb-schema.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
jsonschema = { version = "0.18", default-features = false }
serde_json = "1"
sha2 = "0.11"
sqlite-vec = "=0.1.7"

[features]
default = []
# EU-5b: turning on this feature causes `EmbedderChoice::Default` to
# materialize a real `CandleBgeEmbedder` via the loader at `Engine::open`.
# Without it, `EmbedderChoice::Default` returns a typed `EmbedderError`
# rather than attempting a network fetch (preserves the no-network build
# closure per ADR-0.7.1-default-embedder-weight-fetch).
default-embedder = ["fathomdb-embedder/default-embedder"]

[dev-dependencies]
libc = "0.2"
proptest = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
