[package]
name = "fathomdb-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "fathomdb_napi"
crate-type = ["cdylib", "rlib"]

[features]
default = []
test-hooks = []
# EU-6: forward the engine's default-embedder feature so the
# `useDefaultEmbedder: true` option actually materializes a real
# `CandleBgeEmbedder`. See fathomdb-py's mirror comment.
default-embedder = ["fathomdb-engine/default-embedder"]

[dependencies]
fathomdb-embedder.workspace = true
fathomdb-embedder-api.workspace = true
fathomdb-engine.workspace = true
fathomdb-schema.workspace = true
napi = { version = "2", features = ["napi8", "async", "tokio_rt", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2"
