[package]
name = "fathomdb-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "fathomdb_py"
crate-type = ["cdylib", "rlib"]

[features]
default = []
test-hooks = []
# EU-6: forward the engine's default-embedder feature so the
# `use_default_embedder=True` kwarg actually materializes a real
# `CandleBgeEmbedder` rather than failing with a typed Embedder error.
# Wheels built without this feature still expose the kwarg but reject
# `True` at open time per ADR-0.7.1-default-embedder-weight-fetch (no
# silent network in a no-feature wheel).
default-embedder = ["fathomdb-engine/default-embedder"]
# GPU acceleration (opt-in; forwards to the engine; default wheel stays CPU).
# Build: `maturin develop --features pyo3/extension-module,embed-cuda`; activate via
# FATHOMDB_EMBED_DEVICE=cuda. See dev/design/0.8.1-embedder-gpu-and-portability.md.
embed-cuda = ["default-embedder", "fathomdb-engine/embed-cuda"]
embed-metal = ["default-embedder", "fathomdb-engine/embed-metal"]

[dependencies]
fathomdb-embedder.workspace = true
fathomdb-embedder-api.workspace = true
fathomdb-engine.workspace = true
fathomdb-schema.workspace = true
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py310"] }
serde_json = "1"
