[package]
name = "fathomdb-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "fathomdb_py"
crate-type = ["cdylib", "rlib"]

[features]
default = []
test-hooks = []
# EU-6: forward the engine's default-embedder feature so the
# `use_default_embedder=True` kwarg actually materializes a real
# `CandleBgeEmbedder` rather than failing with a typed Embedder error.
# Wheels built without this feature still expose the kwarg but reject
# `True` at open time per ADR-0.7.1-default-embedder-weight-fetch (no
# silent network in a no-feature wheel).
default-embedder = ["fathomdb-engine/default-embedder"]
# 0.8.2 Slice E2 fix-1 [P1]: forward the engine's default-reranker feature so
# a plain `maturin develop` / `pytest` activates the real CE reranker in
# dev/test builds. The shipped wheel keeps `default-reranker` OFF (release.yml
# and ci.yml pin their own explicit `--features` lists that omit it).
default-reranker = ["fathomdb-engine/default-reranker"]
# GPU acceleration (opt-in; forwards to the engine; default wheel stays CPU).
# Build: `maturin develop --features pyo3/extension-module,embed-cuda`; activate via
# FATHOMDB_EMBED_DEVICE=cuda. See dev/design/0.8.1-embedder-gpu-and-portability.md.
embed-cuda = ["default-embedder", "fathomdb-engine/embed-cuda"]
embed-metal = ["default-embedder", "fathomdb-engine/embed-metal"]
# 0.8.12 — GPU acceleration for the CE reranker (opt-in; forwards to the engine;
# default wheel stays CPU). Build: `maturin develop --features
# pyo3/extension-module,rerank-cuda`; activate via FATHOMDB_RERANK_DEVICE=cuda.
# The shipped wheel keeps this OFF (release.yml/ci.yml pin explicit feature lists).
rerank-cuda = ["default-reranker", "fathomdb-engine/rerank-cuda"]
rerank-metal = ["default-reranker", "fathomdb-engine/rerank-metal"]

[dependencies]
fathomdb-embedder.workspace = true
fathomdb-embedder-api.workspace = true
fathomdb-engine.workspace = true
fathomdb-schema.workspace = true
# 0.8.9 Slice 20 (F-9): `extension-module` is NOT always-on. It tells pyo3 to link
# libpython-less (symbols resolved by the host interpreter at import), which makes the
# standalone `cargo test --workspace` test binary fail to link under strict macOS/Windows
# linkers (Linux tolerates it). Wheels + `maturin develop` pass it back explicitly via
# `--features pyo3/extension-module` (release.yml, ci.yml, the Cargo.toml:30 dev command),
# so the shipped artifact and dev flow are unchanged; only the workspace test link is fixed.
pyo3 = { version = "0.29", features = ["abi3-py310"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
