[package]
name = "fathomdb-query"
description = "FathomDB query layer — JSON-filter AST and validation surface (leaf crate)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
proptest = "1"
