[package]
name = "fathomdb-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
proptest = "1"
