[package]
name = "fathomdb"
description = "FathomDB facade crate — re-exports the public Rust surface of fathomdb-engine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fathomdb-engine.workspace = true

[features]
default = []
# Slice 27 fix-1 (Q5=BIND-RUST, AC-074): forwards the operator/recovery seam
# gate into the engine and un-gates the 20 operator-seam re-exports below. The
# DEFAULT facade is recovery-clean + raw-SQL-free at the method level;
# `fathomdb-cli` enables this so `recover`/`doctor` still compile.
operator = ["fathomdb-engine/operator"]

[dev-dependencies]
# 0.8.20 Slice 5c (R-20-E3) — compile-fail harness for
# `tests/compile_fail_provenance.rs`. TEST-ONLY: `trybuild` is a
# `[dev-dependencies]` entry and is never linked into the published facade.
trybuild = "1.0"
# 0.8.20 Slice 5d (R-20-E4) — scratch databases for `tests/sdk_only_erasure.rs`.
# TEST-ONLY, same posture as `trybuild`: never linked into the published facade.
tempfile = "3"
